--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,11 @@ nav ul li a {
   color: #fff;
   margin: 24px 0;
 }
+.image-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .hero-container .text-section .hero-section-button {
 }
