--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ nav ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
+  size: 100%;
 }
 
 .hero-container .text-section .hero-section-button {
